--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -265,7 +265,7 @@ jobs:
               sudo date -Ins -s "$(date -Ins -d "$secs seconds")"
               echo "Time travelled! Current time: $(date)"
               prev_time_change="$(cat "$TIME_FILE")"
-              echo "$(( prev_time_change + secs ))" > "$TIME_FILE"
+              echo "$(( prev_time_change + secs ))" | sudo tee "$TIME_FILE"
             fi
 
             env "CARGO_TARGET_DIR=$tmp_output_dir" \
@@ -283,7 +283,7 @@ jobs:
 
             output_dir="$(mktemp -dp .)"
             time_file="$(mktemp)"
-            chmod 777 "$time_file"
+            chmod 666 "$time_file"
             echo "0" > "$time_file"
             echo "$output_dir" | base64 > "${env_dir}/output_dir"
             echo "$PATH" | base64 > "${env_dir}/path"
