fix: give up on proper time tracking

--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -264,8 +264,6 @@ jobs:
               secs="$(shuf -i "${min_secs}-${max_secs}" -n 1)"
               sudo date -Ins -s "$(date -Ins -d "$secs seconds")"
               echo "Time travelled! Current time: $(date)"
-              prev_time_change="$(cat "$TIME_FILE")"
-              echo "$(( prev_time_change + secs ))" | sudo tee "$TIME_FILE"
             fi
 
             env "CARGO_TARGET_DIR=$tmp_output_dir" \
@@ -282,9 +280,6 @@ jobs:
             env_dir="$1"
 
             output_dir="$(mktemp -dp .)"
-            time_file="$(mktemp)"
-            chmod 666 "$time_file"
-            echo "0" > "$time_file"
             echo "$output_dir" | base64 > "${env_dir}/output_dir"
             echo "$PATH" | base64 > "${env_dir}/path"
             REPROTEST_VERBOSE="$(cat "${env_dir}/reprotest_verbose" | base64 -d)"
@@ -302,14 +297,14 @@ jobs:
             cargo fetch --locked "--target=$target"
             sudo -g repro1 -u repro1 -- cargo fetch --locked "--target=$target"
 
-            env "ENV_DIR=$env_dir" "TIME_FILE=$time_file" reprotest \
+            before_time="$(date -Ins)"
+            env "ENV_DIR=$env_dir" reprotest \
               "--store-dir=$EXECUTABLE_DIR" \
               "--verbosity=$REPROTEST_VERBOSE" \
               "--variations=$REPROTEST_VARY" \
               "bash $COMPILER_FILE" "${output_dir}/*" \
               && touch "${env_dir}/REPRODUCIBLE" || true
-
-            sudo date -Ins -s "$(date -Ins -d "-$(cat "$time_file") seconds")"
+            sudo date -Ins -s "$before_time" # This SHOULD be fine - a few minutes of skew is OK as long as we can pass SSL check
         run: |
           dockerfile="$(mktemp)"
           compiler_file="$(mktemp -p .)"
