--- a/.github/workflows/build-and-publish.yaml
+++ b/.github/workflows/build-and-publish.yaml
@@ -80,6 +80,7 @@ jobs:
         powerpc64-unknown-linux-gnu         # PPC64 Linux (kernel 3.2, glibc 2.17)
         powerpc64le-unknown-linux-gnu       # PPC64LE Linux (kernel 3.10, glibc 2.17)
         riscv64gc-unknown-linux-gnu         # RISC-V Linux (kernel 4.20, glibc 2.29)
+        riscv64gc-unknown-linux-musl        # RISC-V Linux (kernel 4.20, musl 1.2.3)
         s390x-unknown-linux-gnu             # S390x Linux (kernel 3.2, glibc 2.17)
         x86_64-unknown-freebsd              # 64-bit x86 FreeBSD
         x86_64-unknown-illumos              # illumos
